apps/powerdns/manifests/deployment-admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poweradmin
  namespace: powerdns
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poweradmin
  template:
    metadata:
      labels:
        app: poweradmin
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 82
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: poweradmin
          image: ghcr.io/poweradmin/poweradmin:4.4.1@sha256:5ef3345e4892ac07c5c1c7d59055f35c0b9ad9909344683a6b6de35834d420a4
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: 128Mi
              cpu: 5m
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: caddy
              mountPath: /var/caddy
            - name: db
              mountPath: /db
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          emptyDir: {}
        - name: caddy
          emptyDir: {}
        - name: db
          emptyDir: {}
        - name: tmp
          emptyDir: {}
