apps/powerdns/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: poweradmin
  namespace: powerdns
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - powerdns.mgmt.sholdee.net
  rules:
    - backendRefs:
        - name: poweradmin
          namespace: powerdns
          port: 80
