apps/powerdns/manifests/netpol.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dnsdist
  namespace: powerdns
spec:
  endpointSelector:
    matchLabels:
      app: dnsdist
  ingress:
    - fromEntities:
        - all
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: powerdns
  namespace: powerdns
spec:
  endpointSelector:
    matchLabels:
      app: powerdns
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: dnsdist
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-dns
            app.kubernetes.io/name: external-dns
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: envoy-gateway
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: poweradmin
  namespace: powerdns
spec:
  endpointSelector:
    matchLabels:
      app: poweradmin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: envoy-gateway
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: powerdns-db-pooler
  namespace: powerdns
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/podRole: pooler
      cnpg.io/poolerName: powerdns-db-pooler-rw
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: powerdns
        - matchLabels:
            app: poweradmin
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9127"
              protocol: TCP
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: powerdns-db
  namespace: powerdns
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/podRole: instance
      cnpg.io/cluster: powerdns-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            cnpg.io/podRole: pooler
            cnpg.io/poolerName: powerdns-db-pooler-rw
        - matchLabels:
            cnpg.io/podRole: instance
            cnpg.io/cluster: powerdns-db
        - matchLabels:
            cnpg.io/jobRole: join
            cnpg.io/cluster: powerdns-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
            app.kubernetes.io/name: cloudnative-pg
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9187"
              protocol: TCP
